--- a/public/css/glasslogin2.css
+++ b/public/css/glasslogin2.css
@@ -179,3 +179,10 @@ a:hover {
     color: var(--secondary-color);
     text-decoration: none;
 }
+
+
+label,
+span,
+a {
+    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+}
