--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -1,39 +1,35 @@
-@font-face {
-    font-family: 'Poppins';
-    src: url('../fonts/Poppins/');
-}
-
 :root {
     --active-color: rgb(95, 52, 173);
     --bg-color: #132279;
-    --bg-active-transparent-color: rgba(13, 22, 79,.8);
-    --bg-transparent-color: rgba(13, 22, 79,.5);
+    --bg-active-transparent-color: rgba(13, 22, 79, 0.8);
+    --bg-transparent-color: rgba(13, 22, 79, 0.5);
 }
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;    
-    font-size: 1vw;
     box-sizing: border-box;
-
-}   
-
-body {    
-    min-height: 100vh;
-    width: 100%;    
-    background: url('/public/img/img1-min.png') !important;
 }
 
+body {
+    font-family: "Poppins", sans-serif;
+    background-image: linear-gradient(180deg, #000, #111);
+    width: 100%;
+    max-width: 100vw;
+    min-height: 100vh;
+    overflow: hidden;
+}
 
 nav {
-    position:absolute;
+    position: absolute;
     top: 100px;
-    right: 100px;    
+    right: 100px;
     width: 30vw;
     border-radius: 10px;
     background: var(--bg-transparent-color);
-    box-shadow: 5px 5px 15px var(--bg-active-transparent-color), 5px 5px 5px var(--bg-color) inset;
+    box-shadow: 5px 5px 15px var(--bg-active-transparent-color),
+        5px 5px 5px var(--bg-color) inset;
+    backdrop-filter: blur(15px);
 }
 
 ul {
@@ -45,8 +41,8 @@ ul {
     /* display: flex;
     flex-direction: column;
     justify-content:space-around; */
-    align-items: center;    
-    line-height: 2.5em;    
+    align-items: center;
+    line-height: 2.5em;
     z-index: 10;
     gap: 5px;
 }
@@ -56,25 +52,63 @@ nav ul li {
     position: relative;
     top: 0;
     left: 0;
-    list-style: none;    
-    
-    transition: .5s;
+    list-style: none;
+
+    transition: 0.5s;
 }
 
-nav ul li a {    
+nav ul li a {
     border-radius: 20px;
     text-decoration: none;
-    letter-spacing: .1em;    
+    letter-spacing: 0.1em;
     color: #eee;
-    font-size: .8rem;
-    transition: .5s;
+    font-size: 0.8rem;
+    transition: 0.5s;
     padding: 5px 10px;
 }
 
-nav ul li a:hover {    
-    transition: .5s;
-    letter-spacing: .3em;
-    color:#fff;
+nav ul li a:hover {
+    transition: 0.5s;
+    letter-spacing: 0.3em;
+    color: #fff;
     background: var(--bg-active-transparent-color);
-    box-shadow: 5px 5px 15px var(--bg-active-transparent-color), 5px 5px 5px #999 inset;
+    box-shadow: 5px 5px 15px var(--bg-active-transparent-color),
+        5px 5px 5px #999 inset;
+}
+
+/* Estrellas del fondo */
+
+.contenedor {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+.contenedor:hover {
+    cursor: pointer;
+}
+
+.estrella {
+    position: absolute;
+    width: 4px;
+    height: 4px;
+    background-color: #fff;
+    border-radius: 50%;
+    animation: animar_estrella 4s forwards;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes animar_estrella {
+    0% {
+        opacity: 0;
+        filter: blur(10px);
+    }
+    50% {
+        opacity: 1;
+        filter: blur(0px);
+    }
+    100% {
+        filter: blur(10px);
+        opacity: 0;
+    }
 }
